Update UrlQueue.java